--- a/about-us.html
+++ b/about-us.html
@@ -87,7 +87,7 @@
                 <div class="col-lg-10 mx-auto">
                     <div class="video position-relative">
                         <img src="img/video-bg.jpg" alt="" class="img-fluid" />
-                        <button id="yt-vid" class="border-0 bg-transparent" youtubeid="2-crBg6wpp0">
+                        <button id="yt-vid" class="border-0 bg-transparent" youtubeid="NX-xjN6W4Es">
                             <svg xmlns="http://www.w3.org/2000/svg" height="4em" fill="#EFEEE9" viewBox="0 0 384 512">
                                 <path
                                     d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z" />
@@ -122,7 +122,8 @@
                         <div class="slide-card text-center">
                             <p>I am overwhelmed! And really in love with my new Moroccan rug! Superb quality, individual
                                 design, top service! And it
-                                was great fun working with Khalida - not only...... <span class="d-none">handmade touch to our bedroom,
+                                was great fun working with Khalida - not only...... <span class="d-none">handmade touch
+                                    to our bedroom,
                                     and reminds me of my trips to Morocco whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
                                     in
@@ -161,7 +162,8 @@
                         <div class="slide-card text-center">
                             <p>Khalida was so helpful, answered any questions I had and extremely accommodating. The
                                 dimensions and colour shown are accurate, and the whool is sooo soft. It adds a
-                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to Morocco
+                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to
+                                    Morocco
                                     whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
                                     in
@@ -200,7 +202,8 @@
                         <div class="slide-card text-center">
                             <p>I recently purchased a beautiful rug from My Moroccan Rug ! The quality of the rug is
                                 exceptional - it's soft, durable,
-                                and adds the perfect touch of warmth......... <span class="d-none">handmade touch to our bedroom, and
+                                and adds the perfect touch of warmth......... <span class="d-none">handmade touch to our
+                                    bedroom, and
                                     reminds me of my trips to Morocco whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
                                     in
@@ -239,7 +242,8 @@
                         <div class="slide-card text-center">
                             <p>Khalida was so helpful, answered any questions I had and extremely accommodating. The
                                 dimensions and colour shown are accurate, and the whool is sooo soft. It adds a
-                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to Morocco
+                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to
+                                    Morocco
                                     whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
                                     in
