testimonial show more

--- a/about-us.html
+++ b/about-us.html
@@ -122,7 +122,7 @@
                         <div class="slide-card text-center">
                             <p>I am overwhelmed! And really in love with my new Moroccan rug! Superb quality, individual
                                 design, top service! And it
-                                was great fun working with Khalida - not only...... <span class="d-none">handmade touch
+                                was great fun working with Khalida - not only...... <span>handmade touch
                                     to our bedroom,
                                     and reminds me of my trips to Morocco whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
@@ -162,15 +162,15 @@
                         <div class="slide-card text-center">
                             <p>Khalida was so helpful, answered any questions I had and extremely accommodating. The
                                 dimensions and colour shown are accurate, and the whool is sooo soft. It adds a
-                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to
+                                beautiful, <span>handmade touch to our bedroom, and reminds me of my trips to
                                     Morocco
                                     whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
                                     in
                                     future. 😍</span></p>
-                            <a role="button">Show less</a>
+                            <a role="button">Show more</a>
                             <h5 class="mb-0">- Laurene Robert</h5>
-                            <div class="">
+                            <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="#FFCA05"
                                     viewBox="0 0 576 512">
                                     <path
@@ -202,7 +202,7 @@
                         <div class="slide-card text-center">
                             <p>I recently purchased a beautiful rug from My Moroccan Rug ! The quality of the rug is
                                 exceptional - it's soft, durable,
-                                and adds the perfect touch of warmth......... <span class="d-none">handmade touch to our
+                                and adds the perfect touch of warmth......... <span>handmade touch to our
                                     bedroom, and
                                     reminds me of my trips to Morocco whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
@@ -242,15 +242,15 @@
                         <div class="slide-card text-center">
                             <p>Khalida was so helpful, answered any questions I had and extremely accommodating. The
                                 dimensions and colour shown are accurate, and the whool is sooo soft. It adds a
-                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to
+                                beautiful, <span>handmade touch to our bedroom, and reminds me of my trips to
                                     Morocco
                                     whenever
                                     I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
                                     in
                                     future. 😍</span></p>
-                            <a role="button">Show less</a>
+                            <a role="button">Show more</a>
                             <h5 class="mb-0">- Laurene Robert</h5>
-                            <div class="">
+                            <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="#FFCA05"
                                     viewBox="0 0 576 512">
                                     <path
